fixed computation of file:// absolute URL (was not working on Windows)
M    trunk/src/main/java/fr/inria/zuist/engine/SceneManager.java


git-svn-id: file:///home/hoijui/src/IsaViz/tmp2/zvtm.svn/code@5187 74e165f3-c697-40a6-91af-552c8936d7fe